--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 # Core dependencies for ms-swift fine-tuning
 ms-swift
 transformers>=4.51.0
-torch>=2.0.0
 datasets
 accelerate
 tensorboard
 sentencepiece
 protobuf
+numpy<2.0.0
+
+# Jupyter for interactive development
+jupyter
+jupyterlab
+ipywidgets
