--- a/k8s/secret-hf-token.yaml.template
+++ b/k8s/secret-hf-token.yaml.template
@@ -8,7 +8,7 @@ type: Opaque
 stringData:
   # Replace with your HuggingFace token
   # Get your token from: https://huggingface.co/settings/tokens
-  token: "hf_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+  token: "hf_YOUR_TOKEN_HERE"
 
 ---
 # Alternative: Create secret directly from command line (recommended for production)
