--- a/k8s/jupyter-1gpu-test.yaml
+++ b/k8s/jupyter-1gpu-test.yaml
@@ -4,10 +4,12 @@ metadata:
   name: vlm-jupyter-1gpu
 spec:
   restartPolicy: Never
+  imagePullSecrets:
+  - name: ghcr-secret
   containers:
   - name: jupyter-container
     image: ghcr.io/kkuntal990/ms-swift-qwen:latest
-    command: ["sleep", "infinity"]
+    command: ["jupyter", "lab", "--ip=0.0.0.0", "--no-browser", "--allow-root", "--NotebookApp.token=selfimprove"]
 
     resources:
       limits:
@@ -16,7 +18,7 @@ spec:
         cpu: "2"
       requests:
         nvidia.com/a100: "1"
-        memory: "16G"
+        memory: "16Gi"
         cpu: "2"
 
 
@@ -51,17 +53,17 @@ spec:
 
     # Model and dataset configuration
     - name: MODEL_ID
-      value: "Qwen/Qwen3-8B"
+      value: "Qwen/Qwen2.5-VL-32B-Instruct"
     - name: DATASET_ID
-      value: "tatsu-lab/alpaca#500"
+      value: "lmms-lab/VQAv2#500"
 
     # Training hyperparameters
     - name: MAX_LEN
       value: "2048"
     - name: BATCH
-      value: "1"
+      value: "4"
     - name: GRAD_ACC
-      value: "16"
+      value: "8"
     - name: EPOCHS
       value: "1"
     - name: LR
