--- a/k8s/pvc-outputs.yaml
+++ b/k8s/pvc-outputs.yaml
@@ -2,15 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ms-swift-outputs-pvc
-  labels:
-    app: ms-swift
-    tier: storage
 spec:
-  # Use rook-cephfs for outputs - optimized for large files
-  # (checkpoints, model weights, dataset shards)
-  storageClassName: rook-cephfs
+  storageClassName: rook-cephfs  # Keep RWX if needed for multi-node
   accessModes:
-    - ReadWriteMany  # Allow sharing across multiple jobs/pods if needed
+    - ReadWriteMany  # Only if you need multi-node access
+  volumeMode: Filesystem
   resources:
     requests:
-      storage: 300Gi
+      storage: 500Gi
